src/test/resources/de/cd4analysis/cocos/mcg2ebnf/valid/CD4AC3001.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3001 {
	abstract class A;
}