src/test/resources/de/cd4analysis/cocos/mcg2ebnf/invalid/CD4AC3001.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3001 {

	final public class A;
	public final class B;
	private class C;
	protected class D;
	static class E;
	final class F;
	/ class G;
}